# WhatsMyName-Python

./: .gitignore  README.md  pyproject.toml  requirements.txt  whatsmyname.py  whatsmyname_report_intelbroker.html  whatsmyname_report_ooggle.html  wmn-data.json  wmn_intelbroker_20260429_195249.html
