[project]
name = "WhatsMyName-Python"
version = "1.3.0"
description = "OSINT tool to search for a username across hundreds of websites using the WhatsMyName dataset"
authors = [{ name = "C3n7ral051nt4g3ncy" }]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "tqdm",
]

[project.urls]
"Homepage"         = "https://github.com/C3n7ral051nt4g3ncy/WhatsMyName-Python"
"Upstream Web App" = "https://whatsmyname.app/"

[project.scripts]
whatsmyname = "whatsmyname:main"

[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"
